# Microcosm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerFlags.cmake  Libraries.cmake  MicrocosmConfig.cmake.in  Testing.cmake
include/Microcosm/: Bezier  BoundBox  Differentiable  Json  Line  Noise  Pcg  Plane  Quadrature  Quaternion  Ray  Serializer  Tensor  Timer  Video  math  memory  miniz  stbi  utility
include/Microcosm/Application/SDL/: Audio  Keyboard  Mouse  Window  common  events
include/Microcosm/GPU/OpenGL/: Buffer  DrawElements  Framebuffer  Program  Renderbuffer  ScreenQuad  Shader  Texture  VertexArray  gl3w  gl3w.h  glcorearb.h
include/Microcosm/GPU/Vulkan/: Buffer  CommandBuffer  Device  Fence  Image  Instance  Pipeline  Semaphore  Shader  common
include/Microcosm/Geometry/: Delaunator  DynamicBVH  DynamicKDTree  FCurve  FileMTL  FileOBJ  FilePLY  HalfEdgeMesh  ImmutableBVH  ImmutableKDTree  IntersectMPR  Mesh  MinkowskiDifference  PiecewiseLinear  PiecewiseLinearCurve  SparseMatrix  common  glTF
include/Microcosm/Render/: MLT  Manifold  Material  Medium  Path  Scattering  Scene  Shape  Spectrum  SpectrumImage  common
include/Microcosm/Render/More/Camera/: Perspective
include/Microcosm/Render/More/Scattering/: Diffuse  Diffusion  Fresnel  Media  Microflake  Microsurface  Phase
include/Microcosm/Render/More/Shape/: Cylinder  Disk  Follicle  Primitive  Primitives  Sphere  Triangle  TriangleMesh
include/Microcosm/Render/More/Spectrum/: Prospect  RefractiveIndex
include/Microcosm/UI/: Clock  Color  Context  DrawCmds  Font  Keyboard  Mouse  Panel  Rect  Screen  Text  Theme  Transform  common
include/Microcosm/UI/Artist/: Behavior  Fill  Icon  Stroke  common
include/Microcosm/UI/Behavior/: Button  Click  ClickToMove  Slider  Text  common
include/Microcosm/UI/setup/: SDL
include/Microcosm/hidden@/Tensor/: IndexVector.h  MallocArray.h  Slice.h  Tensor.h  TensorLambda.h  TensorLambda_operators.h  TensorLambda_operators.h.rb  TensorLike.h  TensorShape.h  TensorView.h  common.h  math.h
include/Microcosm/hidden@/Tensor/math/: DecompChol.h  DecompLU.h  DecompQR.h  DecompSVD.h  LengthHelper.h  OrthoHelper.h  cmath.h  cmath.h.rb  color.h  geometric.h  initializers.h  stats.h
include/Microcosm/hidden@/math/: cmath.h  cmath.h.rb  cmath_extras.h  constants.h  converger.h  distributions.h  interpolation.h
include/Microcosm/hidden@/memory/: DeepPtr.h  GrowableHeap.h  GrowableStack.h  IntrusivePoolVector.h  MemoryArena.h  MemoryPool.h  RefPtr.h  StaticQueue.h  StaticStack.h  StaticString.h
include/Microcosm/hidden@/utility/: ArrayLike.h  DType.h  Half.h  IteratorRange.h  LinkList.h  TypeList.h  UTF8.h  algorithm.h  common.h  string.h
src/: CMakeLists.txt  Json.cc  Quadrature.cc  QuadratureTabulated.h  Serializer.cc  Video.cc  miniz.cc  miniz.h  stbi.cc
src/Application/SDL/: Audio.cc  CMakeLists.txt  Keyboard.cc  Mouse.cc  Window.cc  common.cc
src/GPU/: CMakeLists.txt
src/GPU/OpenGL/: CMakeLists.txt  ScreenQuad.cc  gl3w.c  gl3w.cc
src/GPU/Vulkan/: Buffer.cc  CMakeLists.txt  CommandBuffer.cc  Device.cc  Fence.cc  Image.cc  Instance.cc  Pipeline.cc  Semaphore.cc  Shader.cc  common.cc
src/Geometry/: CMakeLists.txt  Delaunator.cc  DynamicBVH.cc  DynamicKDTree.cc  FCurve.cc  FileMTL.cc  FileOBJ.cc  FilePLY.cc  HalfEdgeMesh.cc  ImmutableBVH.cc  ImmutableKDTree.cc  IntersectMPR.cc  Mesh.cc  PiecewiseLinear.cc  PiecewiseLinearCurve.cc  README.md  SparseMatrix.cc  glTF.cc
src/Geometry/unit_tests/: CMakeLists.txt  FCurve.cc  FileMTL.cc  FileOBJ.cc  HalfEdgeMesh.cc  IntersectMPR.cc  Mesh.cc  MinkowskiDifference.cc  glTF.cc
src/Render/: CMakeLists.txt  MLT.cc  Manifold.cc  Material.cc  Path.cc  Scattering.cc  Scene.cc  Shape.cc  Spectrum.cc  SpectrumImage.cc  common.cc
src/Render/More/Scattering/: Diffuse.cc  Diffusion.cc  Fresnel.cc  Media.cc  Microflake.cc  Microsurface.cc  Phase.cc
src/Render/More/Scattering/unit_tests/: Microflake.cc
src/Render/More/Shape/: Cylinder.cc  Disk.cc  Follicle.cc  Primitives.cc  Sphere.cc  Triangle.cc  TriangleMesh.cc
src/Render/More/Shape/unit_tests/: Primitives.cc
src/Render/More/Spectrum/: Prospect.cc  ProspectTable.h  RefractiveIndex.cc  RefractiveIndexMetals.h
src/Render/More/Spectrum/unit_tests/: Prospect.cc
src/Render/unit_tests/: CMakeLists.txt  Fresnel.cc  Microsurface.cc  Scattering.cc
src/UI/: CMakeLists.txt  Color.cc  Context.cc  DrawCmds.cc  Font.cc  Keyboard.cc  Mouse.cc  Panel.cc  Rect.cc  Text.cc  Theme.cc  Transform.cc  stb_rect_pack.h  stb_truetype.h
src/UI/Artist/: Behavior.cc  CMakeLists.txt  Fill.cc  Icon.cc  Stroke.cc
src/UI/Behavior/: CMakeLists.txt  Text.cc
src/UI/unit_tests/: CMakeLists.txt  Color.cc  Rect.cc  Transform.cc
src/unit_tests/: Bezier.cc  CMakeLists.txt  Differentiable.cc  Json.cc  Noise.cc  Pcg.cc  Quadrature.cc  Quaternion.cc  Serializer.cc  Tensor.cc  Timer.cc  math.cc  memory.cc  miniz.cc  utility.cc
testing/: testing.h
